--- a/index.html
+++ b/index.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
    <head>
-      <title>Title</title>
+      <meta charset="UTF-8">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+
+      <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.min.js"></script>
+
+
+      <link rel="stylesheet" href="styles.css">
+      <script defer src="box_template_builder.js"></script>
+
+      <title>Portfolio</title>
+      <style>
+      </style>
    </head>
    <body>
-      <h1>H1</h1>
-      <p>paragraph</p>
+      <!-- box template -->
+      <script id="box-template" type="text/x-handlebars-template">
+         <div class="box" style="float: left;">
+            <div class="carousel slide" id="carousel-{{id}}" data-bs-ride="carousel">
+               <div class="carousel-inner">
+                  {{#each images}}
+                  <div class="carousel-item {{#if @first}}active{{/if}}">
+                     <img src="img/{{this}}" alt="">
+                  </div>
+                  {{/each}}
+               </div>
+               <br/>
+               <div class="carousel-indicators">
+                  {{#each images}}
+                  <button type="button" data-bs-target="#carousel-{{../id}}" data-bs-slide-to="{{@index}}" class="{{#if @first}}active{{/if}}"></button>
+                  {{/each}}
+               </div>
+            </div>
+            <div class="box-text-box">
+               <p class="box-time-text">{{time}}</p>
+               <p class="box-title-text">{{title}}</p>
+               <p class="box-body-text">{{body}}</p>
+            </div>
+         </div>
+      </script>
+      <div id="content"></div>
    </body>
 </html>
