bg and more items

--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
       </style>
    </head>
    <body>
+      <h1>- PORTFOLIO -</h1>
       <!-- box template -->
       <script id="box-template" type="text/x-handlebars-template">
-         <div class="box" style="float: left;">
+         <div class="box">
             <div class="carousel slide" id="carousel-{{id}}" data-bs-ride="carousel">
                <div class="carousel-inner">
                   {{#each images}}
                   <div class="carousel-item {{#if @first}}active{{/if}}">
-                     <img src="img/{{this}}" alt="">
+                     <img src="img/carousel/{{this}}" alt="">
                   </div>
                   {{/each}}
                </div>
                <br/>
-               <div class="carousel-indicators">
+               <div class="carousel-indicators {{#if (eq 1 images.length)}}d-none{{/if}}">
                   {{#each images}}
                   <button type="button" data-bs-target="#carousel-{{../id}}" data-bs-slide-to="{{@index}}" class="{{#if @first}}active{{/if}}"></button>
                   {{/each}}
@@ -42,6 +43,6 @@
             </div>
          </div>
       </script>
-      <div id="content"></div>
+      <div id="content" class="grid-container"></div>
    </body>
 </html>
