--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
       <link rel="stylesheet" href="styles.css">
       <script defer src="box_template_builder.js"></script>
 
+      <link rel="stylesheet" href="lightbox/css/lightbox.css">
+
       <title>Portfolio</title>
       <style>
       </style>
    </head>
    <body>
       <h1>- PORTFOLIO -</h1>
-      <!-- box template -->
       <script id="box-template" type="text/x-handlebars-template">
          <div class="box">
             <div class="carousel slide" id="carousel-{{id}}" data-bs-ride="carousel">
                <div class="carousel-inner">
                   {{#each images}}
                   <div class="carousel-item {{#if @first}}active{{/if}}">
-                     <img src="img/carousel/{{this}}" alt="">
+                     <a href="img/carousel/{{this}}">
+                        <img src="img/carousel/{{this}}">
+                     </a>
                   </div>
                   {{/each}}
                </div>
