section for hidden

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
       <link rel="stylesheet" href="styles.css">
       <script defer src="box_template_builder.js"></script>
 
-      <link rel="stylesheet" href="lightbox/css/lightbox.css">
-
       <title>Portfolio</title>
       <style>
       </style>
@@ -33,21 +31,23 @@
                   {{/each}}
                </div>
                <br/>
-               <div class="carousel-indicators {{#if (eq 1 images.length)}}d-none{{/if}}">
-                  {{#each images}}
-                  <button type="button" data-bs-target="#carousel-{{../id}}" data-bs-slide-to="{{@index}}" class="{{#if @first}}active{{/if}}"></button>
-                  {{/each}}
-               </div>
+               <section class="{{#if (eq 1 images.length)}}d-none{{/if}}">
+                  <div class="carousel-indicators">
+                     {{#each images}}
+                     <button type="button" data-bs-target="#carousel-{{../id}}" data-bs-slide-to="{{@index}}" class="{{#if @first}}active{{/if}}"></button>
+                     {{/each}}
+                  </div>
 
-               <button class="carousel-control-prev {{#if (eq 1 images.length)}}d-none{{/if}}" type="button" data-bs-target="#carousel-{{id}}" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-               </button>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carousel-{{id}}" data-bs-slide="prev">
+                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Previous</span>
+                  </button>
 
-               <button class="carousel-control-next {{#if (eq 1 images.length)}}d-none{{/if}}" type="button" data-bs-target="#carousel-{{id}}" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-               </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carousel-{{id}}" data-bs-slide="next">
+                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Next</span>
+                  </button>
+               </section>
             </div>
             <div class="box-text-box">
                <p class="box-time-text">{{time}}</p>
